--- a/src/simulations.ipynb
+++ b/src/simulations.ipynb
@@ -15,7 +15,18 @@
    "source": [
     "import numpy as np\n",
     "from scipy.stats import binom, norm, t\n",
-    "from methods import birge, random_effects_hksj, binomial_method, binomial_adapt, binomial_sigmacdf, random_effects_dl, sign_rank, flip_interval, random_effects_mle, vniim\n",
+    "from methods import (\n",
+    "    birge,\n",
+    "    random_effects_hksj,\n",
+    "    binomial_method,\n",
+    "    binomial_adapt,\n",
+    "    binomial_sigmacdf,\n",
+    "    random_effects_dl,\n",
+    "    sign_rank,\n",
+    "    flip_interval,\n",
+    "    random_effects_mle,\n",
+    "    vniim,\n",
+    ")\n",
     "from tqdm import tqdm\n",
     "import itertools\n",
     "import matplotlib.pyplot as plt\n",
@@ -46,10 +57,9 @@
     "tail_alpha = (1 - target_coverage) / 2\n",
     "\n",
     "\n",
-    "\n",
     "# ns = [3, 10, 31, 100, 316, 1000]\n",
     "# ns = np.logspace(0.5, 3, 6).astype(int)\n",
-    "#ns = np.logspace(0.5, 2, 4).astype(int)\n",
+    "# ns = np.logspace(0.5, 2, 4).astype(int)\n",
     "ns = [3, 10, 31]\n",
     "tail_alphas = {}\n",
     "target_coverages = {}\n",
@@ -92,7 +102,16 @@
     "# mus = np.logspace(-3, 3, 13)\n",
     "mus = np.logspace(-2, 2, 9)\n",
     "\n",
-    "models = ['nonoise', 're_hksj', 're_dl', 'birge', 'signrank', 're_mle', 'pdg', 'vniim'] #'flip']#, 'binomial_adapt', 'binomial_sigmacdf']\n",
+    "models = [\n",
+    "    \"nonoise\",\n",
+    "    \"re_hksj\",\n",
+    "    \"re_dl\",\n",
+    "    \"birge\",\n",
+    "    \"signrank\",\n",
+    "    \"re_mle\",\n",
+    "    \"pdg\",\n",
+    "    \"vniim\",\n",
+    "]  #'flip']#, 'binomial_adapt', 'binomial_sigmacdf']\n",
     "\n",
     "settings = [\n",
     "    \"random_effects\",\n",
@@ -121,8 +140,8 @@
     "        coverages = {k: [] for k in models}\n",
     "        coverages_ba = []\n",
     "        coverages_bs = []\n",
-    "        lengths = {k : [] for k in models}\n",
-    "        midpoints = {k : [] for k in models}\n",
+    "        lengths = {k: [] for k in models}\n",
+    "        midpoints = {k: [] for k in models}\n",
     "\n",
     "        for j in range(1000):\n",
     "            # noise_magnitudes = np.clip(np.random.normal(1, 0.25, n), 0.1, None)\n",
@@ -170,7 +189,6 @@
     "\n",
     "            interval_signrank, _ = sign_rank(values, coverage=target_coverage)\n",
     "\n",
-    "\n",
     "            # interval_binomial_adapt, coverage_ba = binomial_adapt(values, noise_magnitudes, p, 0.6827, cdf, which='random')\n",
     "            # coverages_ba.append(coverage_ba)\n",
     "            # interval_binomial_sigmacdf, cvg = binomial_sigmacdf(values, noise_magnitudes, p, 0.6827)\n",
@@ -197,9 +215,7 @@
     "                values, noise_magnitudes, zalpha=z_alpha, pdg=True\n",
     "            )\n",
     "\n",
-    "            interval_vniim, muhat = vniim(\n",
-    "                values, noise_magnitudes, zalpha=z_alpha\n",
-    "            )\n",
+    "            interval_vniim, muhat = vniim(values, noise_magnitudes, zalpha=z_alpha)\n",
     "\n",
     "            # interval_flip, _ = flip_interval(values, coverage=target_coverage, mode='median', boot=False)\n",
     "\n",
@@ -234,7 +250,9 @@
     "            result_dict[\"length_mean_\" + k] = np.mean(lengths[k])\n",
     "            result_dict[\"midpoint_median\" + k] = np.median(np.abs(midpoints[k]))\n",
     "            result_dict[\"midpoint_mean_\" + k] = np.mean(np.abs(midpoints[k]))\n",
-    "            result_dict[\"length_median_relbinomial_\" + k] = np.median(lengths[k]/lengths[\"nonoise\"])"
+    "            result_dict[\"length_median_relbinomial_\" + k] = np.median(\n",
+    "                lengths[k] / lengths[\"nonoise\"]\n",
+    "            )"
    ]
   },
   {
@@ -243,7 +261,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results['random_effects'][(3, 1)]"
+    "results[\"random_effects\"][(3, 1)]"
    ]
   },
   {
@@ -267,11 +285,11 @@
     "    \"birge\": \"green\",\n",
     "    \"signrank\": \"orange\",\n",
     "    \"pdg\": \"black\",\n",
-    "    \"vniim\": \"yellow\"\n",
+    "    \"vniim\": \"yellow\",\n",
     "    # \"flip\": \"brown\",\n",
     "    # \"binomial_adapt\": \"green\",\n",
     "    # \"binomial_sigmacdf\": \"green\"\n",
-    "    }\n",
+    "}\n",
     "friendly_labels = {\n",
     "    \"nonoise\": \"Binomial\",\n",
     "    \"re_hksj\": \"HKSJ\",\n",
@@ -305,10 +323,20 @@
     "                continue\n",
     "            alpha = (i + 1) / len(ns)\n",
     "            target_coverage = target_coverages[n]\n",
-    "            if method == 'binomial_adapt':\n",
-    "                target_coverage = np.array([results[setting][(n, mu)]['t_coverage_binomial_adapt'] for mu in mus])\n",
-    "            if method == 'binomial_sigmacdf':\n",
-    "                target_coverage = np.array([results[setting][(n, mu)]['t_coverage_binomial_sigmacdf'] for mu in mus])\n",
+    "            if method == \"binomial_adapt\":\n",
+    "                target_coverage = np.array(\n",
+    "                    [\n",
+    "                        results[setting][(n, mu)][\"t_coverage_binomial_adapt\"]\n",
+    "                        for mu in mus\n",
+    "                    ]\n",
+    "                )\n",
+    "            if method == \"binomial_sigmacdf\":\n",
+    "                target_coverage = np.array(\n",
+    "                    [\n",
+    "                        results[setting][(n, mu)][\"t_coverage_binomial_sigmacdf\"]\n",
+    "                        for mu in mus\n",
+    "                    ]\n",
+    "                )\n",
     "            data = [results[setting][(n, mu)][f\"coverage_{method}\"] for mu in mus]\n",
     "            data = np.array(data) - target_coverage\n",
     "            if i == len(ns) - 1:\n",
@@ -319,7 +347,12 @@
     "            # data = np.array([results[setting][(n, mu)][f\"length_median_{method}\"] for mu in mus])\n",
     "            # data_bin = np.array([results[setting][(n, mu)][f\"length_median_nonoise\"] for mu in mus])\n",
     "            # axs[1].plot(mus, data/data_bin, color=colors[method], label=label, alpha=alpha)\n",
-    "            data = np.array([results[setting][(n, mu)][f\"length_median_relbinomial_{method}\"] for mu in mus])\n",
+    "            data = np.array(\n",
+    "                [\n",
+    "                    results[setting][(n, mu)][f\"length_median_relbinomial_{method}\"]\n",
+    "                    for mu in mus\n",
+    "                ]\n",
+    "            )\n",
     "            axs[1].plot(mus, data, color=colors[method], label=label, alpha=alpha)\n",
     "            # data = np.array([results[setting][(n, mu)][f\"midpoint_{method}\"] for mu in mus])\n",
     "            # data_bin = np.array([results[setting][(n, mu)][f\"midpoint_nonoise\"] for mu in mus])\n",
@@ -349,7 +382,7 @@
     "    plt.suptitle(f\"{setting_labels[setting]}\")\n",
     "    # plt.savefig(f\"figs/performance_{setting}.pdf\", bbox_inches=\"tight\")\n",
     "    plt.tight_layout()\n",
-    "    plt.savefig(f'figs/performance_{setting}_exp.png', bbox_inches=\"tight\", dpi=300)\n",
+    "    plt.savefig(f\"figs/performance_{setting}_exp.png\", bbox_inches=\"tight\", dpi=300)\n",
     "    plt.show()"
    ]
   },
@@ -360,6 +393,7 @@
    "outputs": [],
    "source": [
     "from methods import binomial_adapt\n",
+    "\n",
     "ys = np.arange(0, 15, 1) * 0.1\n",
     "n = len(ys)\n",
     "sigmas = np.ones(len(ys))\n",
@@ -369,7 +403,7 @@
     "# first element in each row where the cumulative sum is greater than 0.6827\n",
     "idx_row = np.argmax(probs >= 0.6827, axis=1)\n",
     "\n",
-    "idx_col = n - np.argmax(probs[::-1,:] >= 0.6827, axis=0) - 1\n",
+    "idx_col = n - np.argmax(probs[::-1, :] >= 0.6827, axis=0) - 1\n",
     "\n",
     "# array elements which correspond to both an element of idx_row and idx_col\n",
     "selector_row = np.array([idx_row, np.arange(n)]).T\n",
@@ -380,9 +414,11 @@
     "\n",
     "selected_row[np.arange(n), idx_row] = True\n",
     "selected_col[idx_col, np.arange(n)] = True\n",
-    "plt.imshow((selected_row.astype(int) + selected_col.astype(int)) * (probs>0.6827).astype(int))\n",
-    "plt.ylabel('Index of lower bound')\n",
-    "plt.xlabel('Index of upper bound')\n",
+    "plt.imshow(\n",
+    "    (selected_row.astype(int) + selected_col.astype(int)) * (probs > 0.6827).astype(int)\n",
+    ")\n",
+    "plt.ylabel(\"Index of lower bound\")\n",
+    "plt.xlabel(\"Index of upper bound\")\n",
     "plt.show()"
    ]
   },
@@ -392,14 +428,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "interval_good = selected_row & selected_col & (probs>0.6827)\n",
+    "interval_good = selected_row & selected_col & (probs > 0.6827)\n",
     "# indices of trues\n",
     "intervals_idx = np.array(interval_good.nonzero()).T\n",
     "intervals = ys[intervals_idx]\n",
     "intervals\n",
-    "interval_lengths = intervals[:,1] - intervals[:,0]\n",
+    "interval_lengths = intervals[:, 1] - intervals[:, 0]\n",
     "interval_lengths\n",
-    "interval_probs = probs[intervals_idx[:,0], intervals_idx[:,1]]\n",
+    "interval_probs = probs[intervals_idx[:, 0], intervals_idx[:, 1]]\n",
     "interval_probs"
    ]
   },
@@ -409,9 +445,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "errors_l = np.abs((ys[:,np.newaxis] - intervals[:,0]))/sigmas[:,np.newaxis]\n",
-    "errors_u = np.abs((ys[:,np.newaxis] - intervals[:,1]))/sigmas[:,np.newaxis]\n",
-    "within = (ys[:, np.newaxis] >= intervals[:,0]) & (ys[:, np.newaxis] <= intervals[:,1])\n",
+    "errors_l = np.abs((ys[:, np.newaxis] - intervals[:, 0])) / sigmas[:, np.newaxis]\n",
+    "errors_u = np.abs((ys[:, np.newaxis] - intervals[:, 1])) / sigmas[:, np.newaxis]\n",
+    "within = (ys[:, np.newaxis] >= intervals[:, 0]) & (ys[:, np.newaxis] <= intervals[:, 1])\n",
     "dists = np.minimum(errors_l, errors_u) * (~within)\n",
     "total_dist = np.sum(dists, axis=0)\n",
     "total_dist"
@@ -513,7 +549,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "selector_row"
    ]
   },
@@ -526,27 +561,28 @@
     "import numpy as np\n",
     "import Rmath4\n",
     "from tqdm import tqdm\n",
+    "\n",
     "conf_level = 0.6827\n",
-    "alpha = 1-conf_level\n",
+    "alpha = 1 - conf_level\n",
     "covers = []\n",
     "for i in tqdm(range(8000000)):\n",
-    "    y = np.random.normal(5,2,5)\n",
+    "    y = np.random.normal(5, 2, 5)\n",
     "    n = len(y)\n",
-    "    w = np.add.outer(y, y)/2\n",
+    "    w = np.add.outer(y, y) / 2\n",
     "    w = np.sort(w[np.tril_indices(w.shape[0], 0)])\n",
-    "    qu = int(Rmath4.qsignrank(alpha/2, n, 0, 0))\n",
+    "    qu = int(Rmath4.qsignrank(alpha / 2, n, 0, 0))\n",
     "    if qu == 0:\n",
     "        qu = 1\n",
-    "    ql = int(n*(n+1) / 2 - qu)\n",
-    "    achieved_alpha = 2*Rmath4.psignrank(qu-1, n, 0, 0)\n",
+    "    ql = int(n * (n + 1) / 2 - qu)\n",
+    "    achieved_alpha = 2 * Rmath4.psignrank(qu - 1, n, 0, 0)\n",
     "    # print(achieved, len(w), qu)\n",
     "    # lower = w[ql+1-1]\n",
     "    # upper = w[qu-1]\n",
-    "    lower = w[ql+1-1]\n",
-    "    upper = w[qu-1]\n",
+    "    lower = w[ql + 1 - 1]\n",
+    "    upper = w[qu - 1]\n",
     "    # print(lower, upper)\n",
     "    covers.append(lower < 5 and upper > 5)\n",
-    "print(np.mean(covers), 1-achieved_alpha)"
+    "print(np.mean(covers), 1 - achieved_alpha)"
    ]
   },
   {
